[package]
name = "getcmd"
version = "0.1.0"
edition = "2021"

[dependencies]
directories = "5.0.1"
http = "1.1.0"
reqwest = { version = "0.12.8", features = ["blocking", "json"] }
rpassword = "7.3.1"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
sys-info = "0.9.1"
windows-sys = { version = "0.59.0", features = ["Win32_System_SystemInformation"] }
